--- a/FireworkRNSDKSample/android/app/build.gradle
+++ b/FireworkRNSDKSample/android/app/build.gradle
@@ -149,7 +149,7 @@ android {
   }
 
   defaultConfig {
-    applicationId "com.example.reactnativefireworksdk"
+    applicationId "com.loopnow.bogano"
     minSdkVersion rootProject.ext.minSdkVersion
     targetSdkVersion rootProject.ext.targetSdkVersion
     versionCode 100000
@@ -304,3 +304,5 @@ configurations.all {
     force 'androidx.core:core:1.6.0'
   }
 }
+
+apply from: 'google.gradle'
