--- a/FireworkRNSDKSample/android/app/src/main/AndroidManifest.xml
+++ b/FireworkRNSDKSample/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
-  package="com.example.reactnativefireworksdk">
+  package="com.loopnow.bogano">
 
   <uses-permission android:name="android.permission.INTERNET" />
 
@@ -8,6 +8,7 @@
     android:name=".MainApplication"
     android:label="@string/app_name"
     android:networkSecurityConfig="@xml/network_security_config"
+    android:usesCleartextTraffic="true"
     android:icon="@mipmap/ic_launcher"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:allowBackup="false"
