--- a/FireworkRNSDKSample/android/settings.gradle
+++ b/FireworkRNSDKSample/android/settings.gradle
@@ -5,8 +5,8 @@ apply from: file("../node_modules/@react-native-community/cli-platform-android/n
 include ':app'
 
 include ':firework-react-native-sdk'
+project(':firework-react-native-sdk').projectDir = new File(rootProject.projectDir, '../../android')
 
-	project(':firework-react-native-sdk').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-firework-sdk/android')
 // local firework sdk library
 //include ':fireworklibrary'
 //project(':fireworklibrary').projectDir = new File('../../../firework_sdk/fireworklibrary')
