--- a/FireworkRNSDKSample/android/build.gradle
+++ b/FireworkRNSDKSample/android/build.gradle
@@ -11,15 +11,22 @@ buildscript {
     google()
     mavenCentral()
     jcenter()
+    maven { url "https://jitpack.io" }
   }
   dependencies {
+    // NOTE: Do not place your application dependencies here; they belong
+    // in the individual module build.gradle files
     classpath("com.android.tools.build:gradle:4.0.1")
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-    // NOTE: Do not place your application dependencies here; they belong
-    // in the individual module build.gradle files
     // firebase, in google
     classpath 'com.google.gms:google-services:4.3.10'
+    // Add the Crashlytics Gradle plugin
+    classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
+    // app distribution
+    classpath 'com.google.firebase:firebase-appdistribution-gradle:2.0.1'
+    // dependencies tree, in jitpack
+    classpath 'com.github.znyang:library-analysis:0.2.2'
   }
 }
 
