--- a/FireworkRNSDKSample/android/app/firework.gradle
+++ b/FireworkRNSDKSample/android/app/firework.gradle
@@ -4,6 +4,12 @@ android {
     enabled = true
   }
 
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+  }
+
+
   packagingOptions {
     exclude 'META-INF/DEPENDENCIES'
     exclude 'META-INF/LICENSE'
@@ -23,11 +29,12 @@ dependencies {
 //  implementation 'com.github.loopsocial:AndroidAdsService:v19.5.0'
 }
 
+// AAPT: error: resource android:attr/lStar not found
+// solution 1: some library may dependent on 1.7.x, you can force it to 1.6.0
+// solution 2: upgrade compileSdkVersion and targetSdkVersion to 31
 configurations.all {
   resolutionStrategy {
     force 'androidx.core:core-ktx:1.6.0'
-  }
-  resolutionStrategy {
     force 'androidx.core:core:1.6.0'
   }
 }
