--- a/FireworkRNSDKSample/android/settings.gradle
+++ b/FireworkRNSDKSample/android/settings.gradle
@@ -4,6 +4,8 @@ project(':react-native-vector-icons').projectDir = new File(rootProject.projectD
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
 
+include ':fireworksdk_bridge'
+project(':fireworksdk_bridge').projectDir = new File(rootProject.projectDir, '../../android')
 
 // local firework sdk library
 //include ':fireworklibrary'
