--- a/FireworkRNSDKSample/package.json
+++ b/FireworkRNSDKSample/package.json
@@ -10,7 +10,7 @@
     "bundle-ios": "react-native bundle --entry-file index.js --platform ios --dev false --bundle-output ios/main.jsbundle --assets-dest ios"
   },
   "dependencies": {
-  "react-native-firework-sdk": "^1.1.1",
+  "react-native-firework-sdk": "^1.2.0-beta.1",
     "@expo/react-native-action-sheet": "^3.12.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
@@ -25,6 +25,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-vector-icons": "^9.0.0",
+    "react-native-webview": "^11.18.1",
     "react-redux": "^7.2.6",
     "redux-logger": "^3.0.6",
     "shopify-buy": "^2.13.0"
