--- a/FireworkRNSDKSample/android/app/src/main/AndroidManifest.xml
+++ b/FireworkRNSDKSample/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
   <application
     android:name=".MainApplication"
     android:label="@string/app_name"
+    android:supportsRtl="true"
     android:networkSecurityConfig="@xml/network_security_config"
     android:usesCleartextTraffic="true"
     android:icon="@mipmap/ic_launcher"
