--- a/FireworkRNSDKSample/package.json
+++ b/FireworkRNSDKSample/package.json
@@ -4,12 +4,15 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "install_js_depencies": "npm i && cd .. && npm i",
+    "setup_ios": "npm run install_js_depencies && pod-install",
+    "setup_android": "npm run install_js_depencies",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start"
   },
   "dependencies": {
-  "react-native-firework-sdk": "^1.2.8",
+  "react-native-firework-sdk": "^1.3.0",
     "@expo/react-native-action-sheet": "^3.12.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
@@ -36,6 +39,7 @@
     "@types/redux-logger": "^3.0.9",
     "@types/shopify-buy": "^2.10.9",
     "babel-plugin-module-resolver": "^4.0.0",
-    "metro-react-native-babel-preset": "^0.66.2"
+    "metro-react-native-babel-preset": "^0.66.2",
+    "pod-install": "^0.1.37"
   }
 }
