--- a/FireworkRNSDKSample/package.json
+++ b/FireworkRNSDKSample/package.json
@@ -4,15 +4,15 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "install_js_depencies": "npm i && cd .. && npm i",
-    "setup_ios": "npm run install_js_depencies && pod-install",
-    "setup_android": "npm run install_js_depencies",
+    "install_js_depencies_and_lint": "npm i && cd .. && npm i && npm run lint",
+    "set_up_ios": "npm run install_js_depencies_and_lint && pod-install",
+    "set_up_android": "npm run install_js_depencies_and_lint",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start"
   },
   "dependencies": {
-  "react-native-firework-sdk": "^1.3.1-beta.9",
+  "react-native-firework-sdk": "^1.4.0",
     "@expo/react-native-action-sheet": "^3.12.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
