--- a/FireworkRNSDKSample/package.json
+++ b/FireworkRNSDKSample/package.json
@@ -5,14 +5,15 @@
   "private": true,
   "scripts": {
     "install_js_depencies_and_lint": "npm i && cd .. && npm i && npm run lint",
-    "set_up_ios": "npm run install_js_depencies_and_lint && pod-install",
+    "ios_pod_install": "pod-install",
+    "set_up_ios": "npm run install_js_depencies_and_lint && npm run ios_pod_install",
     "set_up_android": "npm run install_js_depencies_and_lint",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start"
   },
   "dependencies": {
-  "react-native-firework-sdk": "^1.4.3",
+  "react-native-firework-sdk": "^1.5.0",
     "@expo/react-native-action-sheet": "^3.12.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
@@ -25,7 +26,8 @@
     "react-native-elements": "^3.4.2",
     "react-native-root-toast": "^3.3.0",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.10.1",
+    "react-native-uuid": "^2.0.1",
+    "react-native-screens": "^3.18.2",
     "react-native-vector-icons": "^9.0.0",
     "react-native-webview": "^11.18.1",
     "react-redux": "^7.2.6",
@@ -40,6 +42,6 @@
     "@types/shopify-buy": "^2.10.9",
     "babel-plugin-module-resolver": "^4.0.0",
     "metro-react-native-babel-preset": "^0.66.2",
-    "pod-install": "^0.1.37"
+    "pod-install": "^0.1.38"
   }
 }
