--- a/FireworkRNSDKSample/package.json
+++ b/FireworkRNSDKSample/package.json
@@ -13,7 +13,7 @@
     "start": "react-native start"
   },
   "dependencies": {
-  "react-native-firework-sdk": "^1.5.6",
+    "react-native-firework-sdk": "^1.6.1",
     "@expo/react-native-action-sheet": "^3.12.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
@@ -42,6 +42,7 @@
     "@types/shopify-buy": "^2.10.9",
     "babel-plugin-module-resolver": "^4.0.0",
     "metro-react-native-babel-preset": "^0.66.2",
-    "pod-install": "^0.1.38"
+    "pod-install": "^0.1.38",
+    "prettier": "2.7.1"
   }
 }
