--- a/FireworkRNSDKSample/package.json
+++ b/FireworkRNSDKSample/package.json
@@ -13,8 +13,9 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "react-native-firework-sdk": "^1.6.2",
+    "react-native-firework-sdk": "^1.7.0",
     "@expo/react-native-action-sheet": "^3.12.0",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
@@ -24,10 +25,11 @@
     "react-native": "0.66.4",
     "react-native-base64": "^0.2.1",
     "react-native-elements": "^3.4.2",
+    "react-native-restart": "0.0.24",
     "react-native-root-toast": "^3.3.0",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-uuid": "^2.0.1",
     "react-native-screens": "^3.18.2",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-webview": "^11.18.1",
     "react-redux": "^7.2.6",
