Update SDK to v1.8.0

--- a/FireworkRNSDKSample/android/app/src/main/AndroidManifest.xml
+++ b/FireworkRNSDKSample/android/app/src/main/AndroidManifest.xml
@@ -33,17 +33,10 @@
       android:name="Firework:Appid"
       android:value="${fw_appid}" />
 
-    <meta-data
-      android:name="fw_base_url"
-      android:value="${fw_base_url}" />
-
-    <meta-data
-      android:name="fw_pixel_base_url"
-      android:value="${fw_pixel_base_url}" />
-
-    <meta-data
-      android:name="fw_web_socket"
-      android:value="${fw_web_socket}" />
+<!--    <meta-data-->
+<!--      android:name="com.google.android.gms.ads.AD_MANAGER_APP"-->
+<!--      android:value="true"-->
+<!--      tools:replace="android:value" />-->
 
   </application>
 
