--- a/FireworkRNSDKSample/android/build.gradle
+++ b/FireworkRNSDKSample/android/build.gradle
@@ -1,9 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-def REACT_NATIVE_VERSION = new File(['node', '--print',"JSON.parse(require('fs').readFileSync(require.resolve('react-native/package.json'), 'utf-8')).version"].execute(null, rootDir).text.trim())
 
 buildscript {
   ext {
-    kotlin_version = '1.6.10'
+    kotlin_version = '1.5.10'
     minSdkVersion = 21
     compileSdkVersion = 31
     targetSdkVersion = 31
@@ -11,7 +10,7 @@ buildscript {
   repositories {
     google()
     mavenCentral()
-    mavenLocal()
+    maven { url "https://jitpack.io" }
   }
   dependencies {
     // NOTE: Do not place your application dependencies here; they belong
@@ -30,6 +29,7 @@ buildscript {
 
 allprojects {
   repositories {
+    mavenLocal()
     maven {
       // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
       url("$rootDir/../node_modules/react-native/android")
@@ -41,21 +41,6 @@ allprojects {
 
     google()
     mavenCentral()
-    maven { url 'https://jitpack.io' }
-    mavenLocal()
-
-    maven {
-      setUrl("https://s01.oss.sonatype.org/content/repositories/snapshots/")
-      mavenContent {
-        snapshotsOnly()
-      }
-    }
-  }
-
-  configurations.all {
-    resolutionStrategy {
-      // Remove this override in 0.66, as a proper fix is included in react-native itself.
-      force "com.facebook.react:react-native:" + REACT_NATIVE_VERSION
-    }
+    maven { url 'https://www.jitpack.io' }
   }
 }
