--- a/FireworkRNSDKSample/android/settings.gradle
+++ b/FireworkRNSDKSample/android/settings.gradle
@@ -4,3 +4,7 @@ project(':react-native-vector-icons').projectDir = new File(rootProject.projectD
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
 
+
+// local firework sdk library
+//include ':fireworklibrary'
+//project(':fireworklibrary').projectDir = new File('../../../firework_sdk/fireworklibrary')
