--- a/FireworkRNSDKSample/package.json
+++ b/FireworkRNSDKSample/package.json
@@ -13,7 +13,7 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "react-native-firework-sdk": "^2.0.0-beta.5",
+    "react-native-firework-sdk": "^2.0.0",
     "@expo/react-native-action-sheet": "^3.12.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^6.0.9",
