--- a/FireworkRNSDKSample/package.json
+++ b/FireworkRNSDKSample/package.json
@@ -4,7 +4,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "install_js_depencies_and_lint": "npm i && cd .. && npm i && npm run lint",
+    "install_library_js_depencies": "npm --prefix .. i",
+    "install_example_js_depencies": "npm i",
+    "lint_js": "npm --prefix .. run lint",
+    "install_js_depencies_and_lint": "npm run install_library_js_depencies && npm run install_example_js_depencies && npm run lint_js",
     "ios_pod_install": "pod-install",
     "set_up_ios": "npm run install_js_depencies_and_lint && npm run ios_pod_install",
     "set_up_android": "npm run install_js_depencies_and_lint",
@@ -13,7 +16,7 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "react-native-firework-sdk": "1.9.0",
+    "react-native-firework-sdk": "2.1.0",
     "@expo/react-native-action-sheet": "^3.12.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^6.0.9",
