--- a/FireworkRNSDKSample/ios/FireworkSdkExample/Info.plist
+++ b/FireworkRNSDKSample/ios/FireworkSdkExample/Info.plist
@@ -65,7 +65,9 @@
 		<string>Zocial.ttf</string>
 	</array>
 	<key>UIBackgroundModes</key>
-	<array/>
+	<array>
+		<string>audio</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
