--- a/FireworkRNSDKSample/package.json
+++ b/FireworkRNSDKSample/package.json
@@ -4,25 +4,24 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "install_library_js_depencies": "npm --prefix .. i",
-    "install_example_js_depencies": "npm i",
-    "lint_js": "npm --prefix .. run lint",
-    "install_js_depencies_and_lint": "npm run install_library_js_depencies && npm run install_example_js_depencies && npm run lint_js",
+    "install_js_depencies_and_lint": "npm i && cd .. && npm i && npm run lint",
     "ios_pod_install": "pod-install",
     "set_up_ios": "npm run install_js_depencies_and_lint && npm run ios_pod_install",
     "set_up_android": "npm run install_js_depencies_and_lint",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "react-native start"
+    "start": "react-native start",
+    "postinstall": "patch-package"
   },
   "dependencies": {
-    "react-native-firework-sdk": "2.1.0",
+    "react-native-firework-sdk": "1.10.0-beta.1",
     "@expo/react-native-action-sheet": "^3.12.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@reduxjs/toolkit": "^1.7.1",
+    "patch-package": "^6.5.1",
     "react": "17.0.2",
     "react-hook-form": "^7.22.2",
     "react-native": "0.66.4",
