--- a/FireworkRNSDKSample/package.json
+++ b/FireworkRNSDKSample/package.json
@@ -11,7 +11,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "react-native-firework-sdk": "1.10.0-beta.2",
+    "react-native-firework-sdk": "1.10.0",
     "@expo/react-native-action-sheet": "^3.12.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^6.0.9",
@@ -25,7 +25,7 @@
     "react-native-base64": "^0.2.1",
     "react-native-elements": "^3.4.2",
     "react-native-restart": "0.0.24",
-    "react-native-root-toast": "^3.3.0",
+    "react-native-root-toast": "3.3.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.18.2",
     "react-native-uuid": "^2.0.1",
