--- a/FireworkRNSDKSample/android/app/build.gradle
+++ b/FireworkRNSDKSample/android/app/build.gradle
@@ -167,18 +167,10 @@ android {
   }
   signingConfigs {
     debug {
-      storeFile file('debug.keystore')
-      storePassword 'android'
-      keyAlias 'androiddebugkey'
-      keyPassword 'android'
       v1SigningEnabled true
       v2SigningEnabled true
     }
     release {
-      storeFile rootProject.file('loop-release-key.keystore')
-      storePassword   'LoopMeIn!'
-      keyAlias        'dd-key-alias'
-      keyPassword     'LoopMeIn!'
       v1SigningEnabled true
       v2SigningEnabled true
     }
@@ -196,7 +188,7 @@ android {
       versionNameSuffix "-debug" + (env=="Staging" ? "-staging" : "")
       proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
       minifyEnabled enableProguardInReleaseBuilds
-      signingConfig signingConfigs.release
+      signingConfig signingConfigs.debug
       if (nativeArchitectures) {
         ndk {
           abiFilters nativeArchitectures.split(',')
@@ -254,7 +246,6 @@ task copyDownloadableDepsToLibs(type: Copy) {
 apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
 
-apply from: 'google.gradle'
 apply from: 'firework.gradle'
 
 apply from: rootProject.file('lint.gradle')
