--- a/FireworkRNSDKSample/android/app/firework.gradle
+++ b/FireworkRNSDKSample/android/app/firework.gradle
@@ -1,4 +1,3 @@
-
 android {
   packagingOptions {
     exclude 'META-INF/annotation.kotlin_module'
@@ -7,3 +6,24 @@ android {
     exclude 'META-INF/kotlin-stdlib.kotlin_module'
   }
 }
+
+dependencies {
+  implementation "com.firework:sdk:+"
+  implementation "com.firework.external.livestream:singleHostPlayer:+"
+  implementation "com.firework.external.livestream:multiHostPlayer:+"
+}
+
+configurations.all {
+  resolutionStrategy.eachDependency { details ->
+    if (details.requested.group == 'com.firework' && details.requested.name == 'sdk') {
+      details.useVersion rootProject.ext.get("fwNativeVersion")
+    }
+    if (details.requested.group == 'com.firework.external.livestream' && details.requested.name == 'singleHostPlayer') {
+      details.useVersion rootProject.ext.get("fwNativeVersion")
+    }
+    if (details.requested.group == 'com.firework.external.livestream' && details.requested.name == 'multiHostPlayer') {
+      details.useVersion rootProject.ext.get("fwNativeVersion")
+    }
+  }
+}
+
