--- a/FireworkRNSDKSample/android/build.gradle
+++ b/FireworkRNSDKSample/android/build.gradle
@@ -3,10 +3,10 @@ def REACT_NATIVE_VERSION = new File(['node', '--print',"JSON.parse(require('fs')
 
 buildscript {
   ext {
-    kotlin_version = '1.6.10'
+    kotlinVersion = '1.6.10'
     minSdkVersion = 21
-    compileSdkVersion = 31
-    targetSdkVersion = 31
+    compileSdkVersion = 33
+    targetSdkVersion = 33
   }
   repositories {
     google()
@@ -16,15 +16,12 @@ buildscript {
   dependencies {
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
-    classpath("com.android.tools.build:gradle:4.2.0")
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    classpath("com.android.tools.build:gradle:4.2.2")
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
     // firebase, in google
-    classpath 'com.google.gms:google-services:4.3.10'
     // Add the Crashlytics Gradle plugin
-    classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
     // app distribution
-    classpath 'com.google.firebase:firebase-appdistribution-gradle:2.0.1'
   }
 }
 
