--- a/FireworkRNSDKSample/ios/Podfile
+++ b/FireworkRNSDKSample/ios/Podfile
@@ -16,6 +16,7 @@ target 'FireworkSdkExample' do
   # ima
   # pod 'FireworkVideoGIMASupport', '0.1.0'
   # pod 'GoogleAds-IMA-iOS-SDK', '~> 3.14.5'
+  pod 'FireworkVideo/FireworkLowLatencyStreaming'
 
   # Enables Flipper.
   #
