--- a/FireworkRNSDKSample/android/build.gradle
+++ b/FireworkRNSDKSample/android/build.gradle
@@ -17,6 +17,10 @@ buildscript {
     // in the individual module build.gradle files
     classpath("com.android.tools.build:gradle:4.2.0")
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+    // firebase, in google
+    // Add the Crashlytics Gradle plugin
+    // app distribution
   }
 }
 
