--- a/FireworkRNSDKSample/package.json
+++ b/FireworkRNSDKSample/package.json
@@ -7,18 +7,16 @@
     "ios_pod_install": "pod-install",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "react-native start",
-    "postinstall": "patch-package"
+    "start": "react-native start"
   },
   "dependencies": {
-    "react-native-firework-sdk": "2.3.1",
+    "react-native-firework-sdk": "2.4.0-beta.1",
     "@expo/react-native-action-sheet": "^3.12.0",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@reduxjs/toolkit": "^1.7.1",
-    "patch-package": "^6.5.1",
     "react": "17.0.2",
     "react-hook-form": "^7.22.2",
     "react-native": "0.66.4",
