--- a/FireworkRNSDKSample/package.json
+++ b/FireworkRNSDKSample/package.json
@@ -10,7 +10,7 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "react-native-firework-sdk": "2.4.1-beta.1",
+    "react-native-firework-sdk": "2.4.1",
     "@expo/react-native-action-sheet": "^3.12.0",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
@@ -31,7 +31,7 @@
     "react-native-webview": "^11.26.1",
     "react-redux": "^7.2.6",
     "redux-logger": "^3.0.6",
-    "shopify-buy": "^2.13.0"
+    "shopify-buy": "^2.20.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
