Update sample codes for v2.4.3-beta.1

--- a/FireworkRNSDKSample/android/app/firework.gradle
+++ b/FireworkRNSDKSample/android/app/firework.gradle
@@ -1,6 +1,9 @@
 android {
   packagingOptions {
-    exclude 'META-INF/*.kotlin_module'
+    exclude 'META-INF/annotation.kotlin_module'
+    exclude 'META-INF/lifecycle-viewmodel_release.kotlin_module'
+    exclude 'META-INF/annotation-experimental_release.kotlin_module'
+    exclude 'META-INF/kotlin-stdlib.kotlin_module'
   }
 }
 
