--- a/FireworkRNSDKSample/package.json
+++ b/FireworkRNSDKSample/package.json
@@ -10,7 +10,7 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "react-native-firework-sdk": "2.7.2-beta.1",
+    "react-native-firework-sdk": "2.8.0",
     "@expo/react-native-action-sheet": "^3.12.0",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
