--- a/FireworkRNSDKSample/package.json
+++ b/FireworkRNSDKSample/package.json
@@ -10,7 +10,7 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "react-native-firework-sdk": "2.10.1",
+    "react-native-firework-sdk": "2.11.0",
     "@expo/react-native-action-sheet": "^3.12.0",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
@@ -28,6 +28,7 @@
     "react-native-screens": "^3.18.2",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.0.0",
+    "react-native-visibility-aware-view": "^0.3.0",
     "react-native-webview": "^11.26.1",
     "react-redux": "^7.2.6",
     "redux-logger": "^3.0.6",
