Update sample codes for v2.12.0

--- a/FireworkRNSDKSample/ios/Podfile
+++ b/FireworkRNSDKSample/ios/Podfile
@@ -4,10 +4,15 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 platform :ios, '13.0'
 #use_frameworks!
 
+# cocoapods >= 1.9.0
+use_frameworks! :linkage => :static
+
 target 'FireworkSdkExample' do
   config = use_native_modules!
 
   use_react_native!(path: config['reactNativePath'])
+  
+  pod 'FirebaseCrashlytics'
 
   # admob
   # pod 'FireworkVideoGAMSupport', '0.1.0'
