--- a/FireworkRNSDKSample/android/build.gradle
+++ b/FireworkRNSDKSample/android/build.gradle
@@ -3,20 +3,20 @@ def REACT_NATIVE_VERSION = new File(['node', '--print',"JSON.parse(require('fs')
 
 buildscript {
   ext {
-    kotlinVersion = '1.6.10'
+    kotlinVersion = '1.8.22'
     minSdkVersion = 21
     compileSdkVersion = 33
     targetSdkVersion = 33
+//    fwPlayerLaunchMode = 'standard' // singleTask, standard
   }
   repositories {
     google()
-    mavenLocal()
     mavenCentral()
   }
   dependencies {
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
-    classpath("com.android.tools.build:gradle:4.2.2")
+    classpath("com.android.tools.build:gradle:7.0.4")
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
     // firebase, in google
