--- a/FireworkRNSDKSample/package.json
+++ b/FireworkRNSDKSample/package.json
@@ -11,7 +11,7 @@
     "build:ios": "react-native build-ios --scheme FireworkSdkExample --mode Debug --extra-params \"-sdk iphonesimulator CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ GCC_OPTIMIZATION_LEVEL=0 GCC_PRECOMPILE_PREFIX_HEADER=YES ASSETCATALOG_COMPILER_OPTIMIZATION=time DEBUG_INFORMATION_FORMAT=dwarf COMPILER_INDEX_STORE_ENABLE=NO\""
   },
   "dependencies": {
-    "react-native-firework-sdk": "2.17.0-beta.13",
+    "react-native-firework-sdk": "2.17.0",
     "@expo/react-native-action-sheet": "^4.1.1",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-clipboard/clipboard": "^1.16.2",
@@ -31,7 +31,6 @@
     "react-native-screens": "^4.10.0",
     "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-visibility-aware-view": "^0.4.1",
     "react-native-webview": "^13.13.5",
     "react-redux": "^9.2.0",
     "redux-logger": "^3.0.6",
