Update sample codes for v2.17.1

--- a/FireworkRNSDKSample/android/build.gradle
+++ b/FireworkRNSDKSample/android/build.gradle
@@ -8,8 +8,15 @@ buildscript {
     kotlinVersion = "2.0.21"
   }
   repositories {
+    mavenLocal()
     google()
     mavenCentral()
+    maven {
+      setUrl("https://central.sonatype.com/repository/maven-snapshots/")
+      mavenContent {
+        snapshotsOnly()
+      }
+    }
   }
   dependencies {
     classpath("com.android.tools.build:gradle")
