--- a/FireworkRNSDKSample/android/app/build.gradle
+++ b/FireworkRNSDKSample/android/app/build.gradle
@@ -113,7 +113,7 @@ android {
     minSdkVersion rootProject.ext.minSdkVersion
     targetSdkVersion rootProject.ext.targetSdkVersion
     versionCode 1
-    versionName "2.14.0"
+    versionName "2.17.1"
   }
   splits {
     abi {
@@ -174,6 +174,19 @@ android {
       manifestPlaceholders["fw_base_url"] = fw_base_url_production
       manifestPlaceholders["fw_pixel_base_url"] = fw_pixel_base_url_production
       manifestPlaceholders["fw_web_socket"] = fw_web_socket_production
+    }
+  }
+}
+
+repositories {
+  mavenLocal()
+  mavenCentral()
+  google()
+
+  maven {
+    setUrl("https://central.sonatype.com/repository/maven-snapshots/")
+    mavenContent {
+      snapshotsOnly()
     }
   }
 }
