Update sample codes for v2.18.0

--- a/FireworkRNSDKSample/android/gradle.properties
+++ b/FireworkRNSDKSample/android/gradle.properties
@@ -40,4 +40,4 @@ hermesEnabled=true
 
 # Use this property to enable or disable the JS code will be package in debug mode.
 # If set to false, will reley on metro server to run the build.
-bundle_in_debug=true
+#bundle_in_debug=true
